[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-ip-block"
version = "1.0.0"
description = "Django middleware that checks requests against the ip-block.com service."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["django", "middleware", "security", "ip", "firewall", "ip-block"]
authors = [{ name = "ip-block.com" }]
dependencies = [
    "Django>=3.2",
    "requests>=2.20",
]

[project.urls]
Homepage = "https://www.ip-block.com"

[tool.setuptools.packages.find]
include = ["ip_block*"]
